# amath583

./: .gitignore  hyak-notes.txt
exam1/: README.txt  build.sh  exam1.problem1.hpp  matrix-math.py  matrix_swaps.hpp  mm-ijk.cpp  mm-ijk.hpp  mm-ikj.cpp  mm-ikj.hpp  mm-jik.cpp  mm-jik.hpp  mm-jki.cpp  mm-kij.cpp  mm-kji.cpp  mm-kji.hpp  tst-ijk-permutations.cpp  tst-matrix-swaps.cpp
exam2/: README.txt  build.sh  match_pattern-starter.hpp  mysparse-starter.hpp  mysparse.cpp  p3-results.txt  test-input.txt
exam2/src/: match_pattern.cpp  match_pattern.hpp  mysparse.cpp  mysparse.hpp
examples/kr-cuda-examples/: cmpl.cuda  cpp-atomic-ops.cpp  cpp-chk-dev.cpp  cpp-cuda-cublas-gemm.cpp  cpp-cuda-managed.cpp  cpp-cuda-slm.cpp  cpp-cuda-strm-distinct.cpp  cpp-cuda-strm.cpp  cpp-memsymb.cpp  cpp-p2p-cpy-ring.cpp  cpp-p2p-cpy.cpp  cpp-vector-add.cpp  examples-out.txt
hw2/: hw2.cc  hw2.h
hw3/: .gitignore  README.txt  build.sh  daxpy_results.csv  dgemm_results.csv  dgemv_results.csv  double_results_O0.csv  double_results_O3.csv  double_results_fm.csv  float_results_O0.csv  float_results_O3.csv  float_results_fm.csv  hw3.cpp  matrix-utils.hpp  mm-jki.hpp  mm-kij.cpp  refBLAS.hpp  ref_axpyt.hpp  ref_daxpy.cpp  ref_daxpy.hpp  ref_dgemm.cpp  ref_dgemv.cpp  ref_dgemv.hpp  ref_gemmt.cpp  ref_gemmt.hpp  ref_gemvt.cpp  ref_gemvt.hpp
hw3/include/: mm-kij.hpp  ref_dgemm.hpp
hw4/: CMakeLists.txt  README.txt  broadcast-results.xlsx  build.sh  error-results.xlsx  file-swaps-durations.xlsx  file_swaps.hpp  file_swaps_test.cpp  hw4.cpp  hw4_mpi.cpp  hw4_mpi.slurm  matrix_class.hpp  matrix_test.cpp  p7_error.xlsx  p7_scaling.xlsx  read-write-matrix-results.xlsx  readme.txt  scaling-results.xlsx  strassen.cpp  strassen.xlsx
hw4/include/: file_swaps.hpp  matrix_class.hpp  my_broadcast.hpp
hw4/scripts/: p7.slurm  p9.slurm
hw4/src/: file_swaps_test.cpp  matrix_class_test.cpp  p10.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp  p9.cpp  strassen.cpp  strassen_test.cpp
hw5/: README.txt  build.sh
hw5/artifacts/: p3-with-plot.csv  p3.csv  p4_cublas.csv  p4_openblas.csv
hw5/include/: hw5-elevator.hpp  transpose.hpp
hw5/scripts/: p4.slurm
hw5/src/: conway-life-compare-grids.cpp  (+9 more)
hw6/: README.txt  build.sh  p1.cpp
(+10 files in other folders)
